# hydra

./: flake.nix  haskell-template.cabal  hie.yaml
src/: Hydra.hs  Main.hs  UI.hs
src/Hydra/: Action.hs  Prompt.hs
src/Hydra/Collection/: Window.hs
src/UI/: Msg.hs  Widgetable.hs
